[project]
name = "chatbot-openrouter-with-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "chainlit>=2.11.1",
    "openai>=2.41.1",
    "openai-agents>=0.17.5",
    "python-dotenv>=1.2.2",
]
